--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,16 @@
 body {
 	background: red;
 	color:#fff;
+	font-family: "Times New Roman", Georgia, Serif;
 	margin:0;
 	padding: 0;
+}
+h1 {
+	font-size: 48px;
+}
+h2 {
+	font-size: 36px;
+}
+h3 {
+	font-size: 28px;
 }
