--- a/css/style.css
+++ b/css/style.css
@@ -41,3 +41,69 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+
+/* *********************************************************************************************************************
+	Main grid
+	Inspired from onepcscss grid from Yahoo.
+*/
+.section-wrapper {
+	margin: 0 auto;
+	padding: 0 0 0 1%;
+	overflow: hidden;
+}
+
+.onerow {
+	clear: both;
+    //padding: 0 10px;
+}
+
+/* *********************************************************************************************************************
+ * Common columns definitions
+ */
+.col1, .col2, .col5columrow , .col3, .col4, .col5, .col6, .col7, .col8, .col9, .col10, .col11, .col12 {
+	float: left;
+	margin: 0 3% 0 0;
+}
+
+.col1.last, .col2.last, .col5columrow , .col3.last, .col4.last, .col5.last, .col6.last, .col7.last, .col8.last, .col9.last, .col10.last, .col11.last, .col12 {
+	margin: 0;
+}
+
+.col1 { width: 5.5%; }
+.col2 { width: 14%; }
+.col5columrow { width: 17.4%; }
+.col3 { width: 22.5%; }
+.col4 { width: 31%; }
+.col5 { width: 39.5%; }
+.col6 { width: 48%; }
+.col7 { width: 56.5%; }
+.col8 { width: 65%; }
+.col9 { width: 73.5%; }
+.col10 { width: 82%; }
+.col11 { width: 90.5%; }
+.col12 { width: 99%; margin: 0; }
+
+.col1 img, .col2 img, .col3 img, .col4 img, .col5 img, .col6 img, .col7 img, .col8 img, .col9 img, .col10 img, .col11 img, .col12 img {
+	display: block;
+	height: auto;
+	width: 100%;
+}
+
+
+/****************************************************************************
+* 
+****************************************************************************/
+
+#section-wrapper {
+	max-width: 1280px;
+    margin: 0 auto;
+    overflow: hidden;
+	z-index: 0;
+}
+
+body {
+	background-color: black;
+	color: white;
+	margin: 0 auto;
+}
