--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,8 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	background: #161616;
+	color: #fff;
 }
 ol, ul {
 	list-style: none;
@@ -40,4 +42,17 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+h1 {
+	font-size: 48px;
+}
+h2 {
+	font-size: 36px;
+}
+h3 {
+	font-size: 28px;
+}
+a {
+	color: #eee;
+	text-decoration: none;
 }
