--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,10 @@ table {
 /****************************************************************************
 * 
 ****************************************************************************/
+header {
+	text-align: center;
+	
+}
 
 #section-wrapper {
 	max-width: 1280px;
